fixes some visibility for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -722,6 +722,7 @@ label {
 	}
 
 	#jlanding h1 {
+		padding-top: 20vh;
 		color: rgb(250,235,215);
 		font-size: 32px;
 	}
@@ -903,5 +904,9 @@ label {
 		position: static;
 		opacity: 1;
 		background-color: rgb(51, 25, 0);
+	}
+
+	.bghl {
+	background-size: cover;
 	}
 }
